// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Random grids to render render 1`] = `
"+-------------------+
| 3   3   3   3   3 |
|   +-----------+---+
| 3 | 2   2   2 | 0 |
+---+       +---+   |
| 2   2   2 | 0   0 |
+-----------+---+   |
| 1   1   1   1 | 0 |
|           +---+   |
| 1   1   1 | 0   0 |
+-----------+-------+

room 0 size=6 cells=9,13,14,19,23,24
room 1 size=7 cells=15,16,17,18,20,21,22
room 2 size=6 cells=6,7,8,10,11,12
room 3 size=6 cells=0,1,2,3,4,5"
`;

exports[`Random grids to render render 2`] = `
"+-------------------+
| [96m3[39m   [96m3[39m   [96m3[39m   [96m3[39m   [96m3[39m |
|   +-----------+---+
| [96m3[39m | [95m2[39m   [95m2[39m   [95m2[39m | [45m[30m0[39m[49m |
+---+       +---+   |
| [95m2[39m   [95m2[39m   [95m2[39m | [45m[30m0[39m[49m   [45m[30m0[39m[49m |
+-----------+---+   |
| [34m1[39m   [34m1[39m   [34m1[39m   [34m1[39m | [45m[30m0[39m[49m |
|           +---+   |
| [34m1[39m   [34m1[39m   [34m1[39m | [45m[30m0[39m[49m   [45m[30m0[39m[49m |
+-----------+-------+

room 0 size=6 cells=9,13,14,19,23,24
room 1 size=7 cells=15,16,17,18,20,21,22
room 2 size=6 cells=6,7,8,10,11,12
room 3 size=6 cells=0,1,2,3,4,5"
`;

exports[`Random grids to render render 3`] = `
"+---+-----------+-------+---------------+
| 3 | 2   2   2 | 1   1 | 0   0   0   0 |
|   |           +---+   |               |
| 3 | 2   2   2   2 | 1 | 0   0   0   0 |
|   +---+           |   +-------+       |
| 3   3 | 2   2   2 | 1   1   1 | 0   0 |
|       |       +---+---+       +---+   |
| 3   3 | 2   2 | 3   3 | 1   1   1 | 0 |
|       +-------+   +---+           |   |
| 3   3   3   3   3 | 1   1   1   1 | 0 |
+-------------------+---------------+---+

room 0 size=12 cells=6,7,8,9,16,17,18,19,28,29,39,49
room 1 size=13 cells=4,5,15,25,26,27,36,37,38,45,46,47,48
room 2 size=12 cells=1,2,3,11,12,13,14,22,23,24,32,33
room 3 size=13 cells=0,10,20,21,30,31,34,35,40,41,42,43,44"
`;

exports[`Random grids to render render 4`] = `
"+---+-----------+-------+---------------+
| [102m[30m3[39m[49m | [43m[30m2[39m[49m   [43m[30m2[39m[49m   [43m[30m2[39m[49m | [34m1[39m   [34m1[39m | [41m[30m0[39m[49m   [41m[30m0[39m[49m   [41m[30m0[39m[49m   [41m[30m0[39m[49m |
|   |           +---+   |               |
| [102m[30m3[39m[49m | [43m[30m2[39m[49m   [43m[30m2[39m[49m   [43m[30m2[39m[49m   [43m[30m2[39m[49m | [34m1[39m | [41m[30m0[39m[49m   [41m[30m0[39m[49m   [41m[30m0[39m[49m   [41m[30m0[39m[49m |
|   +---+           |   +-------+       |
| [102m[30m3[39m[49m   [102m[30m3[39m[49m | [43m[30m2[39m[49m   [43m[30m2[39m[49m   [43m[30m2[39m[49m | [34m1[39m   [34m1[39m   [34m1[39m | [41m[30m0[39m[49m   [41m[30m0[39m[49m |
|       |       +---+---+       +---+   |
| [102m[30m3[39m[49m   [102m[30m3[39m[49m | [43m[30m2[39m[49m   [43m[30m2[39m[49m | [102m[30m3[39m[49m   [102m[30m3[39m[49m | [34m1[39m   [34m1[39m   [34m1[39m | [41m[30m0[39m[49m |
|       +-------+   +---+           |   |
| [102m[30m3[39m[49m   [102m[30m3[39m[49m   [102m[30m3[39m[49m   [102m[30m3[39m[49m   [102m[30m3[39m[49m | [34m1[39m   [34m1[39m   [34m1[39m   [34m1[39m | [41m[30m0[39m[49m |
+-------------------+---------------+---+

room 0 size=12 cells=6,7,8,9,16,17,18,19,28,29,39,49
room 1 size=13 cells=4,5,15,25,26,27,36,37,38,45,46,47,48
room 2 size=12 cells=1,2,3,11,12,13,14,22,23,24,32,33
room 3 size=13 cells=0,10,20,21,30,31,34,35,40,41,42,43,44"
`;

exports[`Random grids to render render 5`] = `
"+-------------------+
| 2   2   2   2   2 |
|                   |
| 2   2   2   2   2 |
|       +---+   +---+
| 2   2 | 0 | 2 | 0 |
+-------+   +---+   |
| 0   0   0   0   0 |
|                   |
| 0   0   0   0   0 |
+---+---+   +-------+
| 3 | 1 | 0 | 1   1 |
|   |   +---+       |
| 3 | 1   1   1   1 |
|   +---+           |
| 3   3 | 1   1   1 |
|       +-------+   |
| 3   3   3   3 | 1 |
|               |   |
| 3   3   3   3 | 1 |
+---------------+---+

room 0 size=13 cells=12,14,15,16,17,18,19,20,21,22,23,24,27
room 1 size=12 cells=26,28,29,31,32,33,34,37,38,39,44,49
room 2 size=13 cells=0,1,2,3,4,5,6,7,8,9,10,11,13
room 3 size=12 cells=25,30,35,36,40,41,42,43,45,46,47,48"
`;

exports[`Random grids to render render 6`] = `
"+-------------------+
| [106m[30m2[39m[49m   [106m[30m2[39m[49m   [106m[30m2[39m[49m   [106m[30m2[39m[49m   [106m[30m2[39m[49m |
|                   |
| [106m[30m2[39m[49m   [106m[30m2[39m[49m   [106m[30m2[39m[49m   [106m[30m2[39m[49m   [106m[30m2[39m[49m |
|       +---+   +---+
| [106m[30m2[39m[49m   [106m[30m2[39m[49m | [94m0[39m | [106m[30m2[39m[49m | [94m0[39m |
+-------+   +---+   |
| [94m0[39m   [94m0[39m   [94m0[39m   [94m0[39m   [94m0[39m |
|                   |
| [94m0[39m   [94m0[39m   [94m0[39m   [94m0[39m   [94m0[39m |
+---+---+   +-------+
| [104m[30m3[39m[49m | [102m[30m1[39m[49m | [94m0[39m | [102m[30m1[39m[49m   [102m[30m1[39m[49m |
|   |   +---+       |
| [104m[30m3[39m[49m | [102m[30m1[39m[49m   [102m[30m1[39m[49m   [102m[30m1[39m[49m   [102m[30m1[39m[49m |
|   +---+           |
| [104m[30m3[39m[49m   [104m[30m3[39m[49m | [102m[30m1[39m[49m   [102m[30m1[39m[49m   [102m[30m1[39m[49m |
|       +-------+   |
| [104m[30m3[39m[49m   [104m[30m3[39m[49m   [104m[30m3[39m[49m   [104m[30m3[39m[49m | [102m[30m1[39m[49m |
|               |   |
| [104m[30m3[39m[49m   [104m[30m3[39m[49m   [104m[30m3[39m[49m   [104m[30m3[39m[49m | [102m[30m1[39m[49m |
+---------------+---+

room 0 size=13 cells=12,14,15,16,17,18,19,20,21,22,23,24,27
room 1 size=12 cells=26,28,29,31,32,33,34,37,38,39,44,49
room 2 size=13 cells=0,1,2,3,4,5,6,7,8,9,10,11,13
room 3 size=12 cells=25,30,35,36,40,41,42,43,45,46,47,48"
`;

exports[`Random grids to render render 7`] = `
"+---------------------------------------+
| 3   3   3   3   3   3   3   3   3   3 |
+-----------+                           |
| 1   1   1 | 3   3   3   3   3   3   3 |
|           |                           |
| 1   1   1 | 3   3   3   3   3   3   3 |
|           +---+---+       +---+   +---+
| 1   1   1   1 | 2 | 3   3 | 0 | 3 | 0 |
|               |   +---+   |   +---+   |
| 1   1   1   1 | 2   2 | 3 | 0   0   0 |
|               |       +---+           |
| 1   1   1   1 | 2   2   2 | 0   0   0 |
|               |           |           |
| 1   1   1   1 | 2   2   2 | 0   0   0 |
|           +---+           |           |
| 1   1   1 | 2   2   2   2 | 0   0   0 |
|       +---+           +---+           |
| 1   1 | 2   2   2   2 | 0   0   0   0 |
|   +---+               +---+           |
| 1 | 2   2   2   2   2   2 | 0   0   0 |
+---+-----------------------+-----------+

room 0 size=21 cells=37,39,47,48,49,57,58,59,67,68,69,77,78,79,86,87,88,89,97,98,99
room 1 size=28 cells=10,11,12,20,21,22,30,31,32,33,40,41,42,43,50,51,52,53,60,61,62,63,70,71,72,80,81,90
room 2 size=23 cells=34,44,45,54,55,56,64,65,66,73,74,75,76,82,83,84,85,91,92,93,94,95,96
room 3 size=28 cells=0,1,2,3,4,5,6,7,8,9,13,14,15,16,17,18,19,23,24,25,26,27,28,29,35,36,38,46"
`;

exports[`Random grids to render render 8`] = `
"+---------------------------------------+
| [36m3[39m   [36m3[39m   [36m3[39m   [36m3[39m   [36m3[39m   [36m3[39m   [36m3[39m   [36m3[39m   [36m3[39m   [36m3[39m |
+-----------+                           |
| [95m1[39m   [95m1[39m   [95m1[39m | [36m3[39m   [36m3[39m   [36m3[39m   [36m3[39m   [36m3[39m   [36m3[39m   [36m3[39m |
|           |                           |
| [95m1[39m   [95m1[39m   [95m1[39m | [36m3[39m   [36m3[39m   [36m3[39m   [36m3[39m   [36m3[39m   [36m3[39m   [36m3[39m |
|           +---+---+       +---+   +---+
| [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m | [44m[30m2[39m[49m | [36m3[39m   [36m3[39m | [96m0[39m | [36m3[39m | [96m0[39m |
|               |   +---+   |   +---+   |
| [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m | [44m[30m2[39m[49m   [44m[30m2[39m[49m | [36m3[39m | [96m0[39m   [96m0[39m   [96m0[39m |
|               |       +---+           |
| [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m | [44m[30m2[39m[49m   [44m[30m2[39m[49m   [44m[30m2[39m[49m | [96m0[39m   [96m0[39m   [96m0[39m |
|               |           |           |
| [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m | [44m[30m2[39m[49m   [44m[30m2[39m[49m   [44m[30m2[39m[49m | [96m0[39m   [96m0[39m   [96m0[39m |
|           +---+           |           |
| [95m1[39m   [95m1[39m   [95m1[39m | [44m[30m2[39m[49m   [44m[30m2[39m[49m   [44m[30m2[39m[49m   [44m[30m2[39m[49m | [96m0[39m   [96m0[39m   [96m0[39m |
|       +---+           +---+           |
| [95m1[39m   [95m1[39m | [44m[30m2[39m[49m   [44m[30m2[39m[49m   [44m[30m2[39m[49m   [44m[30m2[39m[49m | [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m |
|   +---+               +---+           |
| [95m1[39m | [44m[30m2[39m[49m   [44m[30m2[39m[49m   [44m[30m2[39m[49m   [44m[30m2[39m[49m   [44m[30m2[39m[49m   [44m[30m2[39m[49m | [96m0[39m   [96m0[39m   [96m0[39m |
+---+-----------------------+-----------+

room 0 size=21 cells=37,39,47,48,49,57,58,59,67,68,69,77,78,79,86,87,88,89,97,98,99
room 1 size=28 cells=10,11,12,20,21,22,30,31,32,33,40,41,42,43,50,51,52,53,60,61,62,63,70,71,72,80,81,90
room 2 size=23 cells=34,44,45,54,55,56,64,65,66,73,74,75,76,82,83,84,85,91,92,93,94,95,96
room 3 size=28 cells=0,1,2,3,4,5,6,7,8,9,13,14,15,16,17,18,19,23,24,25,26,27,28,29,35,36,38,46"
`;

exports[`Random grids to render render 9`] = `
"+----+----+---------+----+
|  0 | 11 |  7    7 | 14 |
|    +----+----+----+----+
|  0 | 15   15 |  1    1 |
+----+---------+---------+
| 12 |  2    2 | 13   13 |
+----+----+----+----+----+
|  8 |  4 | 10 |  9 |  5 |
+----+----+----+    |    |
|  3    3 |  6 |  9 |  5 |
+---------+----+----+----+

room 0 size=2 cells=0,5
room 1 size=2 cells=8,9
room 2 size=2 cells=11,12
room 3 size=2 cells=20,21
room 4 size=1 cells=16
room 5 size=2 cells=19,24
room 6 size=1 cells=22
room 7 size=2 cells=2,3
room 8 size=1 cells=15
room 9 size=2 cells=18,23
room 10 size=1 cells=17
room 11 size=1 cells=1
room 12 size=1 cells=10
room 13 size=2 cells=13,14
room 14 size=1 cells=4
room 15 size=2 cells=6,7"
`;

exports[`Random grids to render render 10`] = `
"+----+----+---------+----+
|  [46m[30m0[39m[49m | [34m11[39m |  [33m7[39m    [33m7[39m | [45m[30m14[39m[49m |
|    +----+----+----+----+
|  [46m[30m0[39m[49m | [42m[30m15[39m[49m   [42m[30m15[39m[49m |  [103m[30m1[39m[49m    [103m[30m1[39m[49m |
+----+---------+---------+
| [91m12[39m |  [36m2[39m    [36m2[39m | [96m13[39m   [96m13[39m |
+----+----+----+----+----+
|  [101m[30m8[39m[49m |  [105m[30m4[39m[49m | [94m10[39m |  [106m[30m9[39m[49m |  [35m5[39m |
+----+----+----+    |    |
|  [95m3[39m    [95m3[39m |  [104m[30m6[39m[49m |  [106m[30m9[39m[49m |  [35m5[39m |
+---------+----+----+----+

room 0 size=2 cells=0,5
room 1 size=2 cells=8,9
room 2 size=2 cells=11,12
room 3 size=2 cells=20,21
room 4 size=1 cells=16
room 5 size=2 cells=19,24
room 6 size=1 cells=22
room 7 size=2 cells=2,3
room 8 size=1 cells=15
room 9 size=2 cells=18,23
room 10 size=1 cells=17
room 11 size=1 cells=1
room 12 size=1 cells=10
room 13 size=2 cells=13,14
room 14 size=1 cells=4
room 15 size=2 cells=6,7"
`;

exports[`Random grids to render render 11`] = `
"+----+----+-------------------+----------------+
| 12 | 14 |  6    6    6    6 | 7    7   7   7 |
|    +----+----+---------+----+---+----+-------+
| 12 |  4    4 |  8    8 |  2   2 | 15 | 3   3 |
+----+---------+---------+----+   |    +-------+
|  5    5    5 | 11   11   11 | 2 | 15 | 9   9 |
+---------+----+----+    +----+   |    |       |
|  0    0 | 13   13 | 11 |  1 | 2 | 15 | 9   9 |
|         +---------+----+    +---+    |       |
|  0    0 | 10   10 |  1    1   1 | 15 | 9   9 |
+---------+---------+-------------+----+-------+

room 0 size=4 cells=30,31,40,41
room 1 size=4 cells=35,44,45,46
room 2 size=4 cells=15,16,26,36
room 3 size=2 cells=18,19
room 4 size=2 cells=11,12
room 5 size=3 cells=20,21,22
room 6 size=4 cells=2,3,4,5
room 7 size=4 cells=6,7,8,9
room 8 size=2 cells=13,14
room 9 size=6 cells=28,29,38,39,48,49
room 10 size=2 cells=42,43
room 11 size=4 cells=23,24,25,34
room 12 size=2 cells=0,10
room 13 size=2 cells=32,33
room 14 size=1 cells=1
room 15 size=4 cells=17,27,37,47"
`;

exports[`Random grids to render render 12`] = `
"+----+----+-------------------+----------------+
| [105m[30m12[39m[49m | [44m[30m14[39m[49m |  [104m[30m6[39m[49m    [104m[30m6[39m[49m    [104m[30m6[39m[49m    [104m[30m6[39m[49m | [91m7[39m    [91m7[39m   [91m7[39m   [91m7[39m |
|    +----+----+---------+----+---+----+-------+
| [105m[30m12[39m[49m |  [43m[30m4[39m[49m    [43m[30m4[39m[49m |  [93m8[39m    [93m8[39m |  [45m[30m2[39m[49m   [45m[30m2[39m[49m | [102m[30m15[39m[49m | [33m3[39m   [33m3[39m |
+----+---------+---------+----+   |    +-------+
|  [92m5[39m    [92m5[39m    [92m5[39m | [35m11[39m   [35m11[39m   [35m11[39m | [45m[30m2[39m[49m | [102m[30m15[39m[49m | [94m9[39m   [94m9[39m |
+---------+----+----+    +----+   |    |       |
|  [95m0[39m    [95m0[39m | [46m[30m13[39m[49m   [46m[30m13[39m[49m | [35m11[39m |  [42m[30m1[39m[49m | [45m[30m2[39m[49m | [102m[30m15[39m[49m | [94m9[39m   [94m9[39m |
|         +---------+----+    +---+    |       |
|  [95m0[39m    [95m0[39m | [101m[30m10[39m[49m   [101m[30m10[39m[49m |  [42m[30m1[39m[49m    [42m[30m1[39m[49m   [42m[30m1[39m[49m | [102m[30m15[39m[49m | [94m9[39m   [94m9[39m |
+---------+---------+-------------+----+-------+

room 0 size=4 cells=30,31,40,41
room 1 size=4 cells=35,44,45,46
room 2 size=4 cells=15,16,26,36
room 3 size=2 cells=18,19
room 4 size=2 cells=11,12
room 5 size=3 cells=20,21,22
room 6 size=4 cells=2,3,4,5
room 7 size=4 cells=6,7,8,9
room 8 size=2 cells=13,14
room 9 size=6 cells=28,29,38,39,48,49
room 10 size=2 cells=42,43
room 11 size=4 cells=23,24,25,34
room 12 size=2 cells=0,10
room 13 size=2 cells=32,33
room 14 size=1 cells=1
room 15 size=4 cells=17,27,37,47"
`;

exports[`Random grids to render render 13`] = `
"+--------------+---------+
|  0    0    0 | 15   15 |
+----+         |    +----+
|  6 |  0    0 | 15 |  4 |
|    +----+----+----+    |
|  6    6 |  1 |  4    4 |
|         |    +---------+
|  6    6 |  1 |  7    7 |
+---------+    +---------+
|  9    9 |  1 | 13   13 |
+----+----+    +----+    |
| 11 | 10 |  1 |  2 | 13 |
+----+    +----+    +----+
| 12 | 10   10 |  2    2 |
+----+---------+    +----+
|  8    8    8 |  2 | 14 |
+--------------+----+    |
|  5    5    5 | 14   14 |
|         +----+---------+
|  5    5 |  3    3    3 |
+---------+--------------+

room 0 size=5 cells=0,1,2,6,7
room 1 size=4 cells=12,17,22,27
room 2 size=4 cells=28,33,34,38
room 3 size=3 cells=47,48,49
room 4 size=3 cells=9,13,14
room 5 size=5 cells=40,41,42,45,46
room 6 size=5 cells=5,10,11,15,16
room 7 size=2 cells=18,19
room 8 size=3 cells=35,36,37
room 9 size=2 cells=20,21
room 10 size=3 cells=26,31,32
room 11 size=1 cells=25
room 12 size=1 cells=30
room 13 size=3 cells=23,24,29
room 14 size=3 cells=39,43,44
room 15 size=3 cells=3,4,8"
`;

exports[`Random grids to render render 14`] = `
"+--------------+---------+
|  [101m[30m0[39m[49m    [101m[30m0[39m[49m    [101m[30m0[39m[49m | [106m[30m15[39m[49m   [106m[30m15[39m[49m |
+----+         |    +----+
|  [42m[30m6[39m[49m |  [101m[30m0[39m[49m    [101m[30m0[39m[49m | [106m[30m15[39m[49m |  [104m[30m4[39m[49m |
|    +----+----+----+    |
|  [42m[30m6[39m[49m    [42m[30m6[39m[49m |  [45m[30m1[39m[49m |  [104m[30m4[39m[49m    [104m[30m4[39m[49m |
|         |    +---------+
|  [42m[30m6[39m[49m    [42m[30m6[39m[49m |  [45m[30m1[39m[49m |  [103m[30m7[39m[49m    [103m[30m7[39m[49m |
+---------+    +---------+
|  [105m[30m9[39m[49m    [105m[30m9[39m[49m |  [45m[30m1[39m[49m | [32m13[39m   [32m13[39m |
+----+----+    +----+    |
| [95m11[39m | [43m[30m10[39m[49m |  [45m[30m1[39m[49m |  [46m[30m2[39m[49m | [32m13[39m |
+----+    +----+    +----+
| [41m[30m12[39m[49m | [43m[30m10[39m[49m   [43m[30m10[39m[49m |  [46m[30m2[39m[49m    [46m[30m2[39m[49m |
+----+---------+    +----+
|  [31m8[39m    [31m8[39m    [31m8[39m |  [46m[30m2[39m[49m | [96m14[39m |
+--------------+----+    |
|  [94m5[39m    [94m5[39m    [94m5[39m | [96m14[39m   [96m14[39m |
|         +----+---------+
|  [94m5[39m    [94m5[39m |  [92m3[39m    [92m3[39m    [92m3[39m |
+---------+--------------+

room 0 size=5 cells=0,1,2,6,7
room 1 size=4 cells=12,17,22,27
room 2 size=4 cells=28,33,34,38
room 3 size=3 cells=47,48,49
room 4 size=3 cells=9,13,14
room 5 size=5 cells=40,41,42,45,46
room 6 size=5 cells=5,10,11,15,16
room 7 size=2 cells=18,19
room 8 size=3 cells=35,36,37
room 9 size=2 cells=20,21
room 10 size=3 cells=26,31,32
room 11 size=1 cells=25
room 12 size=1 cells=30
room 13 size=3 cells=23,24,29
room 14 size=3 cells=39,43,44
room 15 size=3 cells=3,4,8"
`;

exports[`Random grids to render render 15`] = `
"+---------+--------------+--------------+---------+
| 12   12 | 11   11   11 | 13   13   13 | 10   10 |
+----+    +----+    +----+    +----+----+         |
|  0 | 12   12 | 11 | 13   13 |  7 | 10   10   10 |
|    +---------+    +---------+    +--------------+
|  0    0    0 | 11 |  1    1 |  7    7    7    7 |
|    +---------+----+    +----+-------------------+
|  0 |  6    6    6 |  1 | 14   14   14   14   14 |
|    |         +----+    +----+-------------------+
|  0 |  6    6 |  1    1    1 |  3    3    3    3 |
|    |    +----+----+         |    +----+         |
|  0 |  6 |  9    9 |  1    1 |  3 | 15 |  3    3 |
+----+----+         +---------+----+    +---------+
|  5    5 |  9    9    9    9 | 15   15   15   15 |
|    +----+----+    +---------+----+----+    +----+
|  5 |  2    2 |  9 |  8    8    8 |  4 | 15 |  4 |
|    +----+    +----+              |    +----+    |
|  5    5 |  2    2 |  8    8    8 |  4    4    4 |
|         |         +----+         |              |
|  5    5 |  2    2    2 |  8    8 |  4    4    4 |
+---------+--------------+---------+--------------+

room 0 size=7 cells=10,20,21,22,30,40,50
room 1 size=8 cells=24,25,34,43,44,45,54,55
room 2 size=7 cells=71,72,82,83,92,93,94
room 3 size=7 cells=46,47,48,49,56,58,59
room 4 size=8 cells=77,79,87,88,89,97,98,99
room 5 size=7 cells=60,61,70,80,81,90,91
room 6 size=6 cells=31,32,33,41,42,51
room 7 size=5 cells=16,26,27,28,29
room 8 size=8 cells=74,75,76,84,85,86,95,96
room 9 size=7 cells=52,53,62,63,64,65,73
room 10 size=5 cells=8,9,17,18,19
room 11 size=5 cells=2,3,4,13,23
room 12 size=4 cells=0,1,11,12
room 13 size=5 cells=5,6,7,14,15
room 14 size=5 cells=35,36,37,38,39
room 15 size=6 cells=57,66,67,68,69,78"
`;

exports[`Random grids to render render 16`] = `
"+---------+--------------+--------------+---------+
| [31m12[39m   [31m12[39m | [103m[30m11[39m[49m   [103m[30m11[39m[49m   [103m[30m11[39m[49m | [91m13[39m   [91m13[39m   [91m13[39m | [96m10[39m   [96m10[39m |
+----+    +----+    +----+    +----+----+         |
|  [105m[30m0[39m[49m | [31m12[39m   [31m12[39m | [103m[30m11[39m[49m | [91m13[39m   [91m13[39m |  [101m[30m7[39m[49m | [96m10[39m   [96m10[39m   [96m10[39m |
|    +---------+    +---------+    +--------------+
|  [105m[30m0[39m[49m    [105m[30m0[39m[49m    [105m[30m0[39m[49m | [103m[30m11[39m[49m |  [42m[30m1[39m[49m    [42m[30m1[39m[49m |  [101m[30m7[39m[49m    [101m[30m7[39m[49m    [101m[30m7[39m[49m    [101m[30m7[39m[49m |
|    +---------+----+    +----+-------------------+
|  [105m[30m0[39m[49m |  [43m[30m6[39m[49m    [43m[30m6[39m[49m    [43m[30m6[39m[49m |  [42m[30m1[39m[49m | [45m[30m14[39m[49m   [45m[30m14[39m[49m   [45m[30m14[39m[49m   [45m[30m14[39m[49m   [45m[30m14[39m[49m |
|    |         +----+    +----+-------------------+
|  [105m[30m0[39m[49m |  [43m[30m6[39m[49m    [43m[30m6[39m[49m |  [42m[30m1[39m[49m    [42m[30m1[39m[49m    [42m[30m1[39m[49m |  [106m[30m3[39m[49m    [106m[30m3[39m[49m    [106m[30m3[39m[49m    [106m[30m3[39m[49m |
|    |    +----+----+         |    +----+         |
|  [105m[30m0[39m[49m |  [43m[30m6[39m[49m |  [44m[30m9[39m[49m    [44m[30m9[39m[49m |  [42m[30m1[39m[49m    [42m[30m1[39m[49m |  [106m[30m3[39m[49m | [46m[30m15[39m[49m |  [106m[30m3[39m[49m    [106m[30m3[39m[49m |
+----+----+         +---------+----+    +---------+
|  [94m5[39m    [94m5[39m |  [44m[30m9[39m[49m    [44m[30m9[39m[49m    [44m[30m9[39m[49m    [44m[30m9[39m[49m | [46m[30m15[39m[49m   [46m[30m15[39m[49m   [46m[30m15[39m[49m   [46m[30m15[39m[49m |
|    +----+----+    +---------+----+----+    +----+
|  [94m5[39m |  [93m2[39m    [93m2[39m |  [44m[30m9[39m[49m |  [35m8[39m    [35m8[39m    [35m8[39m |  [41m[30m4[39m[49m | [46m[30m15[39m[49m |  [41m[30m4[39m[49m |
|    +----+    +----+              |    +----+    |
|  [94m5[39m    [94m5[39m |  [93m2[39m    [93m2[39m |  [35m8[39m    [35m8[39m    [35m8[39m |  [41m[30m4[39m[49m    [41m[30m4[39m[49m    [41m[30m4[39m[49m |
|         |         +----+         |              |
|  [94m5[39m    [94m5[39m |  [93m2[39m    [93m2[39m    [93m2[39m |  [35m8[39m    [35m8[39m |  [41m[30m4[39m[49m    [41m[30m4[39m[49m    [41m[30m4[39m[49m |
+---------+--------------+---------+--------------+

room 0 size=7 cells=10,20,21,22,30,40,50
room 1 size=8 cells=24,25,34,43,44,45,54,55
room 2 size=7 cells=71,72,82,83,92,93,94
room 3 size=7 cells=46,47,48,49,56,58,59
room 4 size=8 cells=77,79,87,88,89,97,98,99
room 5 size=7 cells=60,61,70,80,81,90,91
room 6 size=6 cells=31,32,33,41,42,51
room 7 size=5 cells=16,26,27,28,29
room 8 size=8 cells=74,75,76,84,85,86,95,96
room 9 size=7 cells=52,53,62,63,64,65,73
room 10 size=5 cells=8,9,17,18,19
room 11 size=5 cells=2,3,4,13,23
room 12 size=4 cells=0,1,11,12
room 13 size=5 cells=5,6,7,14,15
room 14 size=5 cells=35,36,37,38,39
room 15 size=6 cells=57,66,67,68,69,78"
`;
